<resources>
    <string name="app_name">ProjectSunshine</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_location_label">Location</string>
    <string name="pref_location_key">Postal Code</string>
    <string name="pref_location_default_postcode">94043</string>



    <string-array name="list_preference_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string name="pref_units_label">Unit</string>
    <string name="pref_units_key">Units</string>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="show_map">Show Map</string>
</resources>
