<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_location_default_postcode"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:title="@string/pref_units_label"
        android:defaultValue="@string/pref_units_metric"
        android:key="@string/pref_units_key"
        android:entries="@array/list_preference_entries"
        android:entryValues="@array/list_preference_entry_values"/>

</PreferenceScreen>
